# folders

./: .gitignore  .gitmodules  Cargo.toml  ExportOptions.plist  Folders_Mac_App_Store_Profile.provisionprofile  LICENSE  README.md  architecture.txt
.github/workflows/: build-gtk.yml  build.yaml
Folders/: FoldersApp.swift  FoldersError.swift
Folders.xcodeproj/: project.pbxproj
Folders/Extensions/: CGRect.swift  FileManager.swift  NSCollectionView.swift  NSCollectionViewDiffableDataSource.swift  NSWorkspace.swift  URL.swift  UTType.swift
Folders/Licenses/: folders-license
Folders/Models/: ApplicationModel.swift  Details.swift  DirectoryScanner.swift  FileModel.swift  FolderModel.swift  FolderSettings.swift  PreviewItem.swift  SceneModel.swift  Settings.swift  SidebarItem.swift
Folders/Utilities/: CollectionViewNavigationResult.swift  DirectoryScanner.swift  DirectoryWatcher.swift  Expression.swift  Filter.swift  IndexPathSequence.swift  NavigationDirection.swift  Sort.swift  (+6 more)
FoldersTests/: DirectoryScannerTests.swift  FoldersTests.swift
FoldersUITests/: FoldersUITests.swift  FoldersUITestsLaunchTests.swift
Scripts/: build.sh
apple/: ExportOptions.plist  Folders.xctestplan
docs/: _config.yml  index.md
graphics/: Folders.symbolic
gtk/: Cargo.toml
gtk/src/: main.rs
gtk/src/file_object/: mod.rs
scripts/: build-website.sh  build.sh  environment.sh  install-dependencies.sh  latest-release  latest-release.py  release-notes.md  release.sh  update-release-notes.sh
src/: file_details.rs  main.rs  update.rs
utilities/: Pipfile  folders  folders.py
(+101 files in other folders)
