[package]
name = "fileaway-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive = "0.21"
walkdir = "2.5"
notify = "4.0.12"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_5"] }
glib = "0.20.9"
rand = "0.9.0"
async-channel = "2.3.1"
gio-sys = "0.20.9"
